2008-09-12  Alper KANAT  <alperkanat@gmail.com>

	* media/images/edit.png, media/css/style.css, templates/blog/detail.html,
	templates/blog/homepage.html: every blog entry have a link to edit itself if
	user is super user..
	* comments/admin.py, comments/models.py: comment list page in admin panel
	now shows a link to the blog entry..
	* polls/admin.py, polls/models.py: poll results are shown in the admin panel
	now..
	* TODO: removed 2 items in the list.. :)
	
2008-09-11  Alper KANAT  <alperkanat@gmail.com>

	* media/css/style.css: some weird layout error just popped out.. :S
	* media/images/latest_comments.png, media/css/style.css,
	settings-example.py, comments/templatetags/comment_filters.py,
	templates/blog/latest_comments.html, templates/blog/sidebar.html, TODO:
	latest comments (limit in settings.py) are shown on the sidebar now..
	
2008-09-09  Alper KANAT  <alperkanat@gmail.com>

	* blog/models.py, templates/blog/comments.html: Comments are now ordered in
	ascending order due to user requests..
	* TODO: new todo's added..

2008-09-08  Alper KANAT  <alperkanat@gmail.com>

	* templates/blog/contact.html: no need to show this despite i don't have
	any content on flickr..

2008-09-07  Alper KANAT  <alperkanat@gmail.com>

	* templates/feeds/latest_description.html: allowed html tags in rss feed..
	* .htaccess: redirection from www.raptiye.org to raptiye.org done!
	* extra/tag_cloud.py, blog/feeds.py: forgot to add datetime object..
	* blog/views.py, blog/feeds.py, extra/tag_cloud.py: filter against the posts
	are better now.. entries are excluded if they're to be published in the
	future or not yet published..
	* media/css/style.css: little css tweak for list items at the homepage..
	* frontpage/templatetags/frontpage_filters.py,
	templates/frontpage/base.html: raptiye's version comes from settings.py
	now..
	* extra/mail.py, comments/views.py: notifications are not sent to the person
	who sends the comment..