@@ -7,7 +7,6 @@ TODO
 
 --- Code Enhancements ---
 
-	* sticky entries
 	* HTML editor
 	* writing comments without having an account
 	* changing :) like strings to images
