@@ -57,7 +57,7 @@ class TagCloud():
 			if tag.entries.count() == 0:
 				continue
 			else:
-				frequency = tag.entries.filter(published=True, datetime__lte=datetime.now())
+				frequency = tag.entries.filter(published=True, datetime__lte=datetime.now()).exclude(sticky=True)
 				self.TAG_CLOUD.append({"name": tag.name, "font_size": frequency.count()})
 				if self.debug:
 					print "%s with count: %d" % (tag.name, frequency.count())
