@@ -1,0 +1,10 @@
+{% if sticky_flag %}
+	<div class="blog_sticky_post">
+		<h2>{{ sticky_post.title }}</h2>
+		<span class="small_note">
+			{{ sticky_post.datetime|date:"d M Y l, \S\a\a\t: H:i" }}
+		</span>
+		<br><br>
+		{{ sticky_post.content|safe|linebreaksbr }}
+	</div>
+{% endif %}
