@@ -27,7 +27,7 @@
 
 	<div id="blog_container">
 		{% if messages %}
-		<div class="blog_sticky_post">
+		<div class="blog_message">
 			{% for message in messages %}
 				{{ message|safe }}
 			{% endfor %}
